objects/blng__TaxTreatment__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__TaxCode__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__GLRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Tax Treatments</relationshipLabel>
        <relationshipName>TaxGLRuleTaxTreatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxIntegration__c</fullName>
        <label>Tax Integration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__TaxIntegration__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__TaxIntegration__c</referenceTo>
        <relationshipLabel>Tax Treatments</relationshipLabel>
        <relationshipName>TaxTreatments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__TaxLegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__LegalEntity__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Tax Treatments</relationshipLabel>
        <relationshipName>TaxLegalEntityTaxTreatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <label>Tax Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__TaxRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Tax Treatments</relationshipLabel>
        <relationshipName>TaxTreatments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tax Treatment</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>